--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -71,12 +71,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "21625526-3fae-4c55-bab5-f91940070681",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "#members = [[]]\n",
+    "output = []\n",
+    "\n",
+    "\n",
+    "n = int(input(\"Introduce the number of members: \"))  # Definir el valor de n\n",
+    "members = [[int(input(\"Introduce the member's age: \")), int(input(\"Introduce the member's handicap: \"))] for x in range(n)]\n",
+    "output = ['Senior' if members[x][0] >= 55 and members[x][1] > 7 else 'Open' for x in range(0, n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "65c3e913",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18, 20], [61, 12]]\n",
+      "['Open', 'Senior']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(members)\n",
+    "print(output)"
    ]
   },
   {
@@ -95,12 +122,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "53061dce-7aa3-4476-8b56-71413c5e135c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "num = int(input('Introduce a number: '))\n",
+    "\n",
+    "if num < 0:\n",
+    "    print(0)\n",
+    "else:    \n",
+    "    multiples = [x for x in range(1, num+1) if x % 3 == 0 or x % 5 == 0]\n",
+    "    print(sum(multiples))"
    ]
   },
   {
@@ -127,12 +169,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a8cb1579-7065-4fc0-bd53-f91c2ad1dad9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 5, 6, 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "num = int(input('Introduce a number: '))\n",
+    "\n",
+    "l = [int(x) for x in str(num)]\n",
+    "\n",
+    "print(l)"
    ]
   },
   {
@@ -155,12 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "86ebe759-76d8-4012-8590-c48a473a6099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -2, 3, -4, 5, -6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "n = int(input(\"Introce a serie's number: \" ))\n",
+    "\n",
+    "l = [int(input(f'Introduce a {x}º number: ')) for x in range(1, n+1)]\n",
+    "\n",
+    "l_inverse = [-x for x in l]\n",
+    "\n",
+    "print(l_inverse)"
    ]
   },
   {
@@ -193,12 +265,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6711881b-450a-44cb-a3d0-367b2c6a4464",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': 1, '2': 4, '3': 9, '4': 16, '5': 25, '6': 36, '7': 49, '8': 64, '9': 81, '10': 100, '11': 121, '12': 144, '13': 169, '14': 196, '15': 225}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "d = {str(x): x ** 2 for x in range(1, 16)}\n",
+    "\n",
+    "print(d)"
    ]
   },
   {
@@ -220,12 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a1d55cea-96c3-4853-8220-17c0904a8816",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "\n",
+    "l_input = [[int(input(f'Introduce de first number of the {x}º list: ')), int(input(f'Introduce de second number of the {x}º list: '))]for x in range(2)]\n",
+    "\n",
+    "l_output = [(x, y) for x in l_input[0] for y in l_input[1]]\n",
+    "\n",
+    "print(f'Input: {l_input}')\n",
+    "print(f'Output: {l_output}')"
    ]
   },
   {
@@ -246,12 +338,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "0175239c-87fa-4ba0-8776-d62567256db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: {'a': [1, 2], 'b': [3, 4]}\n",
+      "Output: [('a', 1), ('a', 2), ('b', 3), ('b', 4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "d = {\"a\": [1, 2], \"b\": [3, 4]}\n",
+    "\n",
+    "d_output = [(x,y) for x in d for y in d[x]]\n",
+    "\n",
+    "print(f'Input: {d}')\n",
+    "print(f'Output: {d_output}')"
    ]
   },
   {
@@ -281,12 +389,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "248918d0-f082-40a8-9d5c-c7b4ffd2bfca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: [([1, 2], [3, 4]), ([5, 6], [7, 8])]\n",
+      "Output: [(1, 3), (1, 4), (2, 3), (2, 4), (5, 7), (5, 8), (6, 7), (6, 8)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "l = [([1, 2], [3, 4]), ([5, 6], [7, 8])]\n",
+    "l_output = [(x,y) for n in range(len(l)) for x in l[n][0] for y in l[n][1]]\n",
+    "\n",
+    "print(f'Input: {l}')\n",
+    "print(f'Output: {l_output}')"
    ]
   },
   {
@@ -308,18 +431,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "c57d9e77-6859-45dd-a2e6-2c1898f1baa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'c', 'b', 'd']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
